What's New
==========

This file summarizes OMNeT++ changes in each release. For changes related to
simulation model compatibility, see doc/API-Changes. For more detailed info
about all changes, see include/ChangeLog, src/*/ChangeLog, and ide/ChangeLog.


OMNeT++ 5.1 Preview 2 (December 2016)
-------------------------------------

This release significantly improves and builds upon functionality introduced
in version 5.0, and also raises the bar in other areas. Highlights include:
a much-improved Qtenv that now replaces Tkenv as the default runtime GUI;
support for smooth custom animation and video recording; better support for
simulation campaigns in managing and performing a large number of runs and in
result recording/processing; experimental support for SQLite-based result
files; updated toolchain and libraries on Windows; 64-bit Windows support;
updated Eclipse base for the IDE.

Note:

1. There are now separate downloads for Linux, Windows and macOS. A fourth
   package labelled "core" comes without the IDE, and can be used on all other
   systems.
2. 32-bit Windows and Linux are no longer supported.

Known Issues:

1. The manuals have not yet been updated.
2. Documentation generation on Windows is currently not working.

Changes since version 5.0:

Core:

 - Support for smooth custom animations. The goal was to allow models to visualize
   their operation using sophisticated animations while the simulation is running
   under a GUI (Qtenv). The key idea is that refreshDisplay() is called repeatedly
   at a reasonable rate to render frames. refreshDisplay() knows the animation
   position from the simulation time (which is now interpolated between events)
   and the "animation time", a variable also made accessible to the model.
   Animation-to-simulation speed ratio (sec/simsec) is determined by an "animation speed"
   variable (or rather, several such variables) that can be set explicitly from code.